src/objects/Sign_Off__c.object
<CustomObject>
    <description>TOOLKIT - used to capture business stakeholder sign off of various project stages.</description>
    <fields>
        <fullName>Agreement_Statement__c</fullName>
        <defaultValue>&quot;I have reviewed the deliverables for the above specified stage and capability. I give official sign off and approval to move forward to the next stage.&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Agreement Statement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agreement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sign_Off</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Capability</label>
        <referenceTo>Capability__c</referenceTo>
        <relationshipLabel>Sign Off</relationshipLabel>
        <relationshipName>Sign_Off</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sign_Off_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sign Off Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sign_Off_Stage__c</fullName>
        <label>Sign Off Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Deploy</fullName>
                </value>
                <value>
                    <fullName>Adapt &amp; Ongoing Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sign_Off_Status__c</fullName>
        <label>Sign Off Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stakeholder__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stakeholder</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Sign Off</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Capability__c</columns>
        <columns>NAME</columns>
        <columns>Assigned_Approver__c</columns>
        <columns>Sign_Off_Stage__c</columns>
        <columns>Sign_Off_Status__c</columns>
        <columns>Sign_Off_Date_Time__c</columns>
        <columns>Stakeholder__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Sign Off Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sign Off</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Sign_Off_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
LEN(Agreement__c)&gt;0 , Agreement__c &lt;&gt; Agreement_Statement__c 
)</errorConditionFormula>
        <errorDisplayField>Agreement__c</errorDisplayField>
        <errorMessage>Please type the Agreement Statement exactly as it appears.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validating_Actual_and_Assigned_Approver</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
LEN(Agreement__c)&gt;0 , 
Assigned_Approver__r.Id &lt;&gt; $User.Id 
)</errorConditionFormula>
        <errorMessage>Only the assigned approver can sign off. Please only fill out agreement if you are the capability owner and named as the assigned approver.</errorMessage>
    </validationRules>
</CustomObject>